apps/sample-nodejs-app/contour/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app-deployment-v2
  namespace: test-app
spec:
  selector:
    matchLabels:
      app: test-nodejs-app
      version: v2
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nodejs-data
      labels:
        app: test-nodejs-app
        version: v2
    spec:
      serviceAccountName: test-app-sa
      containers:
      - name: test-app
        image: projects.registry.vmware.com/tanzu_meta_pocs/app/sample-app:v0.2.8
        volumeMounts:
        - mountPath: /appdir
          name: nodejs-data
        ports:
        - containerPort: 3000
      volumes:
      - name: nodejs-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-app-v2
  namespace: test-app
  labels:
    app: test-nodejs-app
    version: v2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-nodejs-app
    version: v2
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sample-app-weight-shifting
  namespace: test-app
spec:
  virtualhost:
    fqdn: sample-app-w.apps.h2o-4-12014.h2o.vmware.com
  routes:
    - services:
        - name: test-nodejs-app-v1
          port: 80
          weight: 0
        - name: test-nodejs-app-v2
          port: 80
          weight: 100
